--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta name="facebook-domain-verification" content="h86khndwz3okcbpr8yi1imijtseyu0" />
 
     <title>charming</title>
     <!-- favicon -->
